[package]
name = "staking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw721 = "0.18.0"
schemars = "0.8.16"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
cw-multi-test = "0.18.0"
